--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   color: #444;
   transition: background 0.5s, color 0.5s;
 
-  /* 🔹 Animated gradient background */
-  background: linear-gradient(270deg, #fbc2eb, #a6c1ee, #f9f586, #fbc2eb);
+  /* 🔹 Animated purple gradient background */
+  background: linear-gradient(270deg, #d8b4fe, #c084fc, #a855f7, #7e22ce, #c084fc, #d8b4fe);
   background-size: 600% 600%;
   animation: animatedBackground 18s ease infinite;
 }
@@ -29,6 +29,7 @@
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+
 
     header {
       background: linear-gradient(270deg, #fbc2eb, #a6c1ee, #fbc2eb);
@@ -1051,5 +1052,6 @@
   </script>
 </body>
 </html>
+
 
 
