--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     html {
       scroll-behavior: smooth;
     }
-   body {
+  body {
   font-family: 'Quicksand', sans-serif;
   margin: 0;
   padding: 0;
   color: #444;
   transition: background 0.5s, color 0.5s;
 
-  /* 🔹 Animated purple gradient background */
-  background: linear-gradient(270deg, #d8b4fe, #c084fc, #a855f7, #7e22ce, #c084fc, #d8b4fe);
+  /* 🌸 Animated pastel purple + baby blue background */
+  background: linear-gradient(270deg, #e6d6f5, #d0c4f2, #c7d8f9, #e8dffb, #d6e6fa);
   background-size: 600% 600%;
-  animation: animatedBackground 18s ease infinite;
+  animation: animatedBackground 20s ease infinite;
 }
 
 @keyframes animatedBackground {
@@ -1052,6 +1052,7 @@
   </script>
 </body>
 </html>
+
 
 
 
