--- a/index.html
+++ b/index.html
@@ -354,6 +354,15 @@
       animation: blobMove 20s ease-in-out infinite;
       z-index: -1; /* stays behind all content */
     }
+#trianglesCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2; /* behind everything */
+  pointer-events: none;
+}
 
     @keyframes blobMove {
       0%, 100% { transform: translate(-50%, -50%) scale(1); }
@@ -470,6 +479,8 @@
 <body>
 <!-- 🔹 Floating Blob Background -->
 <div class="blob"></div>
+<!-- 🔺 Floating Triangles Canvas -->
+<canvas id="trianglesCanvas"></canvas>
 
   <!-- Preloader -->
   <div id="preloader">
@@ -649,6 +660,78 @@
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
+
+    // Floating triangles animation
+const canvas = document.getElementById("trianglesCanvas");
+const ctx = canvas.getContext("2d");
+
+function resizeCanvas() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+resizeCanvas();
+window.addEventListener("resize", resizeCanvas);
+
+// Triangle class
+class Triangle {
+  constructor() {
+    this.x = Math.random() * canvas.width;
+    this.y = Math.random() * canvas.height;
+    this.size = 20 + Math.random() * 30;
+    this.speedX = (Math.random() - 0.5) * 2;
+    this.speedY = (Math.random() - 0.5) * 2;
+    this.color = `hsla(${Math.random() * 360}, 70%, 80%, 0.6)`;
+  }
+
+  draw() {
+    ctx.beginPath();
+    ctx.moveTo(this.x, this.y - this.size / 2);
+    ctx.lineTo(this.x - this.size / 2, this.y + this.size / 2);
+    ctx.lineTo(this.x + this.size / 2, this.y + this.size / 2);
+    ctx.closePath();
+    ctx.fillStyle = this.color;
+    ctx.fill();
+  }
+
+  update(triangles) {
+    this.x += this.speedX;
+    this.y += this.speedY;
+
+    // Bounce from walls
+    if (this.x < 0 || this.x > canvas.width) this.speedX *= -1;
+    if (this.y < 0 || this.y > canvas.height) this.speedY *= -1;
+
+    // Simple collision check with other triangles
+    for (let t of triangles) {
+      if (t !== this) {
+        const dx = this.x - t.x;
+        const dy = this.y - t.y;
+        const dist = Math.sqrt(dx * dx + dy * dy);
+        if (dist < (this.size + t.size) / 2) {
+          this.speedX *= -1;
+          this.speedY *= -1;
+        }
+      }
+    }
+
+    this.draw();
+  }
+}
+
+let triangles = [];
+for (let i = 0; i < 15; i++) {
+  triangles.push(new Triangle());
+}
+
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  for (let t of triangles) {
+    t.update(triangles);
+  }
+  requestAnimationFrame(animate);
+}
+animate();
+
     // Preloader
     window.addEventListener("load", function() {
       document.getElementById("preloader").style.display = "none";
@@ -1052,6 +1135,7 @@
   </script>
 </body>
 </html>
+
 
 
 
