--- a/index.html
+++ b/index.html
@@ -457,10 +457,15 @@
       right: 0;
     }
     
-    body.dark-mode #langDropdown {
-      background: #2c2c2c;
-      color: #f5f5f5;
-    }
+   body.dark-mode {
+  color: #f5f5f5;
+
+  /* 🌙 Animated darker gradient background */
+  background: linear-gradient(270deg, #2b2b3a, #1f1f2e, #2a2a3d, #242436, #1c1c28);
+  background-size: 600% 600%;
+  animation: animatedBackground 20s ease infinite;
+}
+
     
     body.dark-mode #langDropdown .lang-btn:hover {
       background: rgba(166,193,238,0.2);
@@ -1172,6 +1177,7 @@ animate();
   </script>
 </body>
 </html>
+
 
 
 
