--- a/index.html
+++ b/index.html
@@ -798,11 +798,11 @@ animate();
     let greetingText = "";
 
     if (hour < 12) {
-      greetingText = "Good Morning 🌞";
+      greetingText = "Good Morning !";
     } else if (hour < 18) {
-      greetingText = "Good Afternoon 🌤️";
+      greetingText = "Good Afternoon !";
     } else {
-      greetingText = "Good Evening 🌙";
+      greetingText = "Good Evening !";
     }
 
     // Add fade-in effect
@@ -1177,6 +1177,7 @@ animate();
   </script>
 </body>
 </html>
+
 
 
 
