--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -1215,6 +1215,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
