--- a/index.html
+++ b/index.html
@@ -524,12 +524,13 @@ body[dir="ltr"] .nav-container {
   </div>
 
   <header>
+  <div class="header-content">
     <h1>Bouziani Imane</h1>
-    <p id="greeting"></p> <!-- Dynamic greeting will show here -->
-    <p id="typing"></p>
-
+    <p id="greeting"></p> <!-- Dynamic greeting -->
+    <p id="typing"></p>   <!-- Typing effect -->
     <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
-  </header>
+  </div>
+</header>
 
   <button id="darkBtn"><i class="fa-solid fa-moon"></i> Dark Mode</button>
 
@@ -1215,6 +1216,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
