--- a/index.html
+++ b/index.html
@@ -992,6 +992,11 @@ animate();
     const translations = {
       en: {
         // Navigation
+
+        name: "Bouziani Imane",
+    greeting: "", // will be dynamically filled by JS
+    title: "AI Engineer │ Computer Scientist │ Innovator │ Educator",
+    contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |",
         education: "Education",
         experience: "Experience",
         skills: "Skills",
@@ -1080,6 +1085,11 @@ animate();
         moreBtn: "MORE"
       },
       ar: {
+
+        name: "بوزياني إيمان",
+    greeting: "", // will be dynamically filled by JS
+    title: "مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مربية",
+    contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | واتساب: 0673945830 | وهران، الجزائر |",
         // Navigation
         education: "التعليم",
         experience: "الخبرة",
@@ -1215,6 +1225,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
